<resources>
    <!--Inicio sesion-->
    <string name="app_name">Nómina App</string>
    <string name="label_inicio">Inicio de sesión</string>
    <string name="input_usuario">Usuario</string>
    <string name="input_contrasena">Contraseña</string>
    <string name="button_ingresar">Ingresar</string>
    <string name="labe_olvidaste_contrasena">¿Olvidaste tu Contraseña?</string>
    <string name="label_olvidaste_contrasena">¿Olvidaste tu Contraseña?</string>
    <string name="label_registrarse_app">¿No tienes cuenta?</string>

    <!--Restablecer contraseña-->
    <string name="label_restablecer_contrasena">Restablecer Contraseña</string>
    <string name="input_correo_electronico">Correo Electrónico</string>
    <string name="input_confirmar_correo_electronico">Confirmar Correo Electrónico</string>
    <string name="button_restablecer_contrasena">Enviar</string>
<<<<<<< HEAD

=======
    <string name="input_validacion_correo_electronico">Validación</string>
    
>>>>>>> 42361f9f1e7f27cc97d5cf2e7fb1435247e16c6f
    <!--Registrarse-->
    <string name="label_registrarse">Resgistrarse</string>
    <string name="input_correo_electronico_registrarse">Correo Electrónico</string>
    <string name="input_contrasena_registrarse">Contraseña</string>
    <string name="button_registrarse">Enviar</string>

    <!--Menú-->
    <string name="nombre_usuario">Sebastian Villada Jaramillo</string>
    <string name="cargo_usuario">Administrador</string>
    <string name="area_usuario">Nómina</string>
    <string name="button_instrucciones">Instrucciones</string>
    <string name="button_empleado">Empleado</string>
    <string name="button_area">Área</string>
    <string name="button_liquidacion">Liquidación</string>
    <string name="button_cerrarsesion">Cerrar Sesión</string>

    <!--Liquidación-->
    <string name="label_liquidacion_tiempo_completo">Liquidación Tiempo Completo</string>
    <string name="label_liquidacion_por_dias">Liquidación por Días</string>
    <string name="button_liquidacion_tiempo_completo">Liquidación Tiempo Completo</string>
    <string name="button_liquidacion_por_dias">Liquidación por Días</string>
    <string name="label_fecha_inicio_liquidar">1. FECHA DE INICIO DEL PERIODO A LIQUIDAR</string>
    <string name="label_fecha_final_liquidar">2. FECHA DE FINAL DEL PERIODO A LIQUIDAR</string>
    <string name="label_salario_mensual">3. INGRESE SU SALARIO MENSUAL</string>
    <string name="label_dias_laborados_semana">4. DIAS LABORADOS SEMANA</string>
    <string name="label_salario_diario">3. INGRESE SU SALARIO DIARIO</string>
    <string name="label_auxilio_transporte_dias">5. ¿TIENE DERECHO A AUXILIO DE TRANSPORTE?</string>
    <string name="label_auxilio_transporte">4. ¿TIENE DERECHO A AUXILIO DE TRANSPORTE?</string>
    <string name="edittext_auxilio_trabajo">162000</string>
    <string name="edittext_auxilio_trabajo_por_dias">5400</string>
    <string name="label_clase">5. Seleccione la clase de riesgos laborales correspondiente al sector de actividad y al cargo del trabajador.</string>
    <string name="label_clase_dias">6. Seleccione la clase de riesgos laborales correspondiente al sector de actividad y al cargo del trabajador.</string>
    <string name="button_liquidacion_para_empleado">Liquidación para Empleado</string>
    <string name="button_liquidacion_para_empleador">Liquidación para Empleador</string>
    <string name="button_fecha_defecto">01/01/2024</string>
    <string name="edittext_salario_mensual_defecto">1300000</string>
    <string name="edittext_salario_diario_defecto">43333</string>
    <string name="edittext_dias_defecto">48</string>
    <string name="button_guardar_liquidacion">Guardar</string>
    <string name="button_cancelar_liquidacion">Cancelar</string>

    <!--Empleado-->
    <string name="label_empleado">Empleado</string>
    <string name="button_guardar">Guardar</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="button_editar">Editar</string>
    <string name="button_borrar">Borrar</string>
    <string name="button_activar">Estado</string>
    <string name="input_identificacion">Identificacion</string>
    <string name="input_nombre_empleado">Nombre</string>
    <string name="input_apellido_empleado">Apellido</string>
    <string name="input_email_empleado">Email</string>
    <string name="input_cargo_empleado">Cargo</string>
    <string name="input_area_empleado">Área</string>
    <string name="input_tipo_contrato_empleado">Tipo Contrato</string>
    <string name="input_tipo_salario_empleado">Tipo Salario</string>
    <string name="input_salario_empleado">Salario</string>"
    <string name="input_rol_empleado">Rol</string>
    <string name="input_contrasena_empleado">Contraseña</string>

    <!--Instrucciones-->
    <string name="label_manual_instrucciones">Instrucciones Nomina App</string>

    <!--Area-->
    <string name="label_area">Área</string>
    <string name="input_codigo_area">Código Área</string>
    <string name="input_nombre_area">Nombre Área</string>


    <!--Colilla-->
    <string name="label_info_empresa">INFORMACIÓN EMPRESA</string>
    <string name="label_nit_empresa">NIT EMPRESA</string>
    <string name="label_texto_documento_soporte">LIQUIDACIÓN DEFINITIVA DE PRESTACIONES SOCIALES</string>
    <string name="label_datos_liquidacion">DATOS LIQUIDACIÓN</string>
    <string name="label_nombre_empleado">Nombre empleado</string>
    <string name="label_documento_identificacion">Documento identificacion</string>
    <string name="label_periodo_pago">Periodo de Pago</string>
    <string name="label_dias_trabajados">Dias trabajados</string>
    <string name="label_dias_mensualizado">Dias trabajados (mensual)</string>
    <string name="input_dias_trabajados">100</string>
    <string name="label_salario">Salario</string>
    <string name="label_salario_diario_liquidacion">Salario Diario</string>
    <string name="label_salario_mensualizado">Salario mensual</string>
    <string name="input_salario_ingresado">1.300.000</string>
    <string name="label_transporte">Transporte</string>
    <string name="input_transporte_mensual">162.000</string>
    <string name="label_prestaciones_sociales">PRESTACIONES SOCIALES</string>
    <string name="label_concepto">CONCEPTO</string>
    <string name="label_dias_liquidar">DIAS</string>
    <string name="label_valor_total">VALOR TOTAL</string>
    <string name="label_cesantias">Cesantías</string>
    <string name="input_cesantias">426.417</string>
    <string name="label_intereses_cesantias">Intereses sobre cesantías</string>
    <string name="input_intereses_Cesantias">14.925</string>
    <string name="label_prima_primer_semestre">Prima primer semestre</string>
    <string name="input_prima_primerS">426.417</string>
    <string name="label_prima_segundo_semestre">Prima segundo semestre</string>
    <string name="input_prima_segundoS">0</string>
    <string name="label_vacaciones">Vacaciones</string>
    <string name="input_vacaciones">189.583</string>
    <string name="label_total">TOTAL</string>
    <string name="_label_nota">Recuerde que si ya pago la prima del semestre anterior debe restarla de este resultado</string>
    <string name="label_prima">Prima</string>
    <string name="label_fecha_ingreso">Fecha ingreso</string>
    <string name="label_fecha_retiro">Fecha de retiro</string>
    <string name="label_motivo_retiro">Motivo retiro</string>
    <string name="label_total_pagar_prestaciones">TOTAL A PAGAR POR PRESTACIONES SOCIALES</string>
    <string name="input_total_suma_liquidacion">312.453</string>
    <string name="label_deducciones">DEDUCCIONES</string>
    <string name="input_deducciones">0</string>
    <string name="label_total_pagar">TOTAL A PAGAR</string>
    <string name="input_total_pagar">312.453</string>
    <string name="label_manifiesto">Con la anterior liquidación manifiesto que (INFORMACIÓN EMPRESA) queda a paz y salvo conmigo por concepto prestaciones sociales</string>
    <!-- TODO: Remove or change this placeholder text -->

</resources>