<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LiquidacionTiempoCompleto"
    tools:layout_editor_absoluteX="9dp"
    tools:layout_editor_absoluteY="5dp">


    <Button
        android:id="@+id/botonTiempoCompleto"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="172dp"
        android:layout_height="55dp"
        android:backgroundTint="#DCDFDEDE"
        android:text="@string/button_liquidacion_tiempo_completo"
        android:textColor="@color/black"
        android:textColorHint="#151414"
        android:textColorLink="#0E0D0D"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14"
        app:strokeColor="@color/black"
        tools:ignore="HardcodedText,TextSizeCheck,TextContrastCheck" />

    <Button
        android:id="@+id/botonPorDias"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="172dp"
        android:layout_height="55dp"
        android:text="@string/button_liquidacion_por_dias"
        android:textColor="@color/black"
        app:cornerRadius="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14"
        app:strokeColor="@color/black"
        tools:ignore="HardcodedText,TextContrastCheck" />

    <TextView
        android:id="@+id/FechaIngreso"
        android:layout_width="169dp"
        android:layout_height="57dp"
        android:gravity="center"
        android:text="@string/label_fecha_inicio_liquidar"
        android:textColor="@color/black"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.264"
        tools:ignore="HardcodedText,TextSizeCheck" />

    <TextView
        android:id="@+id/fechaFinalizacion"
        android:layout_width="169dp"
        android:layout_height="57dp"
        android:paddingLeft="10dp"
        android:text="@string/label_fecha_final_liquidar"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.119"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36"
        tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,TextSizeCheck" />

    <TextView
        android:id="@+id/salarioIngresado"
        android:layout_width="171dp"
        android:layout_height="57dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/label_salario"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458"
        tools:ignore="HardcodedText,RtlHardcoded,RtlSymmetry,TextSizeCheck" />

    <TextView
        android:id="@+id/auxilioTransporte"
        android:layout_width="170dp"
        android:layout_height="57dp"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:text="@string/label_auxilio_transporte"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.554"
        tools:ignore="RtlHardcoded,RtlSymmetry,TextSizeCheck" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="59dp"
        android:layout_height="25dp"
        android:text="SI"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.696"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.547"
        tools:ignore="HardcodedText,TextSizeCheck,TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="59dp"
        android:layout_height="25dp"
        android:checked="true"
        android:text="NO"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.911"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.548"
        tools:ignore="HardcodedText,TextSizeCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/fechaIngreso"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/white"
        android:onClick="abrirCalendario"
        android:text="@string/button_fecha_defecto"
        android:textColor="#A8000000"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.273"
        tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/fechaFinal"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:backgroundTint="@color/white"
        android:onClick="abrirCalendario"
        android:text="@string/button_fecha_defecto"
        android:textColor="#A8000000"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.933"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/diasTrabajados"
        android:layout_width="167dp"
        android:layout_height="40dp"
        android:ems="10"
        android:hint="@string/edittext_salario_mensual_defecto"
        android:inputType="numberDecimal"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.926"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.46"
        tools:ignore="Autofill,SpUsage,TextSizeCheck,TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/riesgoLaboral"
        android:layout_width="167dp"
        android:layout_height="85dp"
        android:paddingLeft="10dp"
        android:text="@string/label_clase"
        android:textColor="@color/black"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695"
        tools:ignore="RtlHardcoded,RtlSymmetry,SpUsage,TextSizeCheck" />

    <Button
        android:id="@+id/liquidacionEmpleado"
        android:layout_width="172dp"
        android:layout_height="55dp"
        android:backgroundTint="#FF9800"
        android:text="@string/button_liquidacion_para_empleado"
        android:textColor="@color/black"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.953" />

    <Button
        android:id="@+id/liquidacionEmpleador"
        android:layout_width="172dp"
        android:layout_height="55dp"
        android:backgroundTint="#FF5722"
        android:text="@string/button_liquidacion_para_empleador"
        android:textColor="@color/black"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.924"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952" />

    <Spinner
        android:id="@+id/lista_tiempo_completo"
        android:layout_width="148dp"
        android:layout_height="25dp"
        android:backgroundTint="@color/white"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.651"
        tools:ignore="SpUsage,TextSizeCheck,TouchTargetSizeCheck" />

    <ImageButton
        android:id="@+id/imageButtonMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.026"
        app:srcCompat="@drawable/iconmenu"
        tools:ignore="ContentDescription,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_liquidacion"
        android:textColor="@color/black"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.046"
        tools:ignore="SpUsage,TextSizeCheck" />

    <Button
        android:id="@+id/GuardarLiquidacion"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/button_guardar_liquidacion"
        android:textColor="@color/black"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.942"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/CancelarLiquidacion"
        android:layout_width="100dp"
        android:layout_height="45dp"
        android:backgroundTint="#F44336"
        android:text="@string/button_cancelar_liquidacion"
        android:textColor="@color/black"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.550"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.834"
        tools:ignore="TouchTargetSizeCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>